--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio | Narendra Satya Adikurniawan</title>
+    <title> Portofolio | Narendra Satya Adikurniawan</title>
     <script src="https://unpkg-com/@phosphor-icons/web"></script>
     <link rel="stylesheet" href="style.css" />
 
@@ -90,7 +90,7 @@
             <!-- Project 1 -->
             <div class="project">
                 <img src="./asset/projek_1,1.png" alt="Project 1">
-                <h3>Project Website Ormawa</h3>
+                <h3>Student Organization Website Project</h3>
                 <p>In this project, I was assigned to create a profile page for the needs of the Informatics Engineering Student Association work program. In my assignment I worked on the Front End. In this project I used a little animation with the Java
                     Script programming language. The use of Java Script in this project is used to make the profile page photo display run automatically.</p>
                 <a href="https://himatifums.org/" class="btn">View Project</a>
@@ -98,11 +98,11 @@
 
             <!-- Project 2 -->
             <div class="project">
-                <img src="https://via.placeholder.com/300x200" alt="Project 2">
+                <img src="./asset/projek_2.png" alt="Project 2">
                 <h3>Redesigning the user interface of the MyPresensi UMS application</h3>
                 <p>The UMS MyPresence app is a mobile platform for students and lecturers at Muhammadiyah University of Surakarta (UMS) to manage attendance, track presence, and organize lecture schedules. The app requires a redesign to improve usability.
                     This project focuses on revamping the user interface (UI) to be more intuitive, responsive, and efficient, ensuring easy access to all features for both students and lecturers.</p>
-                <a href="#" class="btn">View Project</a>
+                <a href="https://www.figma.com/design/htKVyqsmdkbGJY55IY3864/MyPresensi?node-id=0-1&t=PFv48wsbtsos2hjj-1" class="btn">View Project</a>
             </div>
 
             <!-- Project 3 -->
