--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="index.html#about">About</a> </li>
             <li><a href="index.html#skills">Skills</a></li>
             <li> <a href="index.html#project">Projects</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html#contact">Contact</a></li>
         </ul>
     </header>
     <script>
@@ -45,7 +45,7 @@
                     persistent, goal-oriented, and have good public speaking skills.</p>
             </section>
             <div class="home-btn">
-                <a href="#" class="btn">Contact Info</a>
+                <a href="index.html#contact" class="btn">Contact Info</a>
                 <a href="https://drive.google.com/file/d/1Z39f4Dg8dP3zRx0ic2eaX9bAl7Po6dhl/view?usp=sharing" class="btn">Download CV</a>
             </div>
         </div>
@@ -107,75 +107,77 @@
 
             <!-- Project 3 -->
             <div class="project">
-                <img src="https://via.placeholder.com/300x200" alt="Project 3">
-                <h3>Project Three</h3>
-                <p>Short description of the project goes here. It's a creative project that pushes boundaries.</p>
-                <a href="#" class="btn">View Project</a>
+                <img src="./asset/projek_3.png" alt="Project 3">
+                <h3>Create Assignments and Determine Design Project Ideas, and Deploy Websites to the Public in Islamic Science and Technology Coursese</h3>
+                <p>In the Islamic Science and Technology course, as a student, I was assigned to create, develop project ideas, and disseminate websites to the public. This involves integrating creative design with technological solutions while aligning
+                    with Islamic values. This project emphasizes practical skills in web development, teamwork, and the ability to present innovative solutions that contribute to social good through technology.</p>
+                <a href="https://www.figma.com/design/I4Xo7v4uJHqMmbT43tXSSy/Untitled?node-id=6-1238&t=aUETRdo7R6QGCoSI-1" class="btn">View Project</a>
             </div>
         </div>
     </section>
 
+    <section id="contact">
+        <footer class="footer bg-dark text-white mt-5 p-4">
+            <div class="container">
+                <div class="row">
+                    <!-- About Me Section -->
+                    <div class="col-md-4 mb-3">
+                        <h5>About Me</h5>
+                        <p>
+                            I am Narendra Satya Adikurniawan, an Informatics Engineering student with a passion for technology, research, and development. Stay connected to learn more about my journey and projects.
+                        </p>
+                    </div>
 
-    <footer class="footer bg-dark text-white mt-5 p-4">
-        <div class="container">
-            <div class="row">
-                <!-- About Me Section -->
-                <div class="col-md-4 mb-3">
-                    <h5>About Me</h5>
-                    <p>
-                        I am Narendra Satya Adikurniawan, an Informatics Engineering student with a passion for technology, research, and development. Stay connected to learn more about my journey and projects.
-                    </p>
+                    <!-- Contact Info Section -->
+                    <div class="col-md-4 mb-3">
+                        <h5>Contact Info</h5>
+                        <ul class="list-unstyled">
+                            <li>Email:
+                                <a href="mailto:narendra.adikurniawan@gmail.com" class="text-white">narendra.adikurniawan@gmail.com</a>
+                            </li>
+                            <li>Phone:
+                                <a href="tel:+6285890022967" class="text-white">+62 858 9002 2967</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- Follow Me Section -->
+                    <div class="col-md-4 mb-3">
+                        <h5>Follow Me</h5>
+                        <ul class="list-unstyled d-flex gap-3">
+                            <li>
+                                <a href="https://instagram.com/narenvisuals_" target="_blank" class="text-white">
+                                    <img src="https://img.icons8.com/ios-filled/24/ffffff/instagram-new.png" alt="Instagram">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/in/narendra-satya-adikurniawan" target="_blank" class="text-white">
+                                    <img src="https://img.icons8.com/ios-filled/24/ffffff/linkedin.png" alt="LinkedIn">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="mailto:narendra.adikurniawan@gmail.com" target="_blank" class="text-white">
+                                    <img src="https://img.icons8.com/ios-filled/24/ffffff/gmail.png" alt="Gmail">
+                                </a>
+                            </li>
+                            <li>
+                                <!-- <a href="https://twitter.com/narenvisuals_" target="_blank" class="text-white">
+                                <img src="https://img.icons8.com/ios-filled/24/ffffff/twitter.png" alt="Twitter">
+                            </a> -->
+                            </li>
+                        </ul>
+                    </div>
                 </div>
 
-                <!-- Contact Info Section -->
-                <div class="col-md-4 mb-3">
-                    <h5>Contact Info</h5>
-                    <ul class="list-unstyled">
-                        <li>Email:
-                            <a href="mailto:narendra.adikurniawan@gmail.com" class="text-white">narendra.adikurniawan@gmail.com</a>
-                        </li>
-                        <li>Phone:
-                            <a href="tel:+6285890022967" class="text-white">+62 858 9002 2967</a>
-                        </li>
-                    </ul>
-                </div>
-
-                <!-- Follow Me Section -->
-                <div class="col-md-4 mb-3">
-                    <h5>Follow Me</h5>
-                    <ul class="list-unstyled d-flex gap-3">
-                        <li>
-                            <a href="https://instagram.com/narenvisuals_" target="_blank" class="text-white">
-                                <img src="https://img.icons8.com/ios-filled/24/ffffff/instagram-new.png" alt="Instagram">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/narendra-satya-adikurniawan" target="_blank" class="text-white">
-                                <img src="https://img.icons8.com/ios-filled/24/ffffff/linkedin.png" alt="LinkedIn">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="mailto:narendra.adikurniawan@gmail.com" target="_blank" class="text-white">
-                                <img src="https://img.icons8.com/ios-filled/24/ffffff/gmail.png" alt="Gmail">
-                            </a>
-                        </li>
-                        <li>
-                            <!-- <a href="https://twitter.com/narenvisuals_" target="_blank" class="text-white">
-                              <img src="https://img.icons8.com/ios-filled/24/ffffff/twitter.png" alt="Twitter">
-                          </a> -->
-                        </li>
-                    </ul>
+                <!-- Copyright Section -->
+                <div class="row">
+                    <div class="col-12 text-center mt-4">
+                        <p class="m-0">&copy; 2024 Narendra Satya Adikurniawan. All Rights Reserved.</p>
+                    </div>
                 </div>
             </div>
-
-            <!-- Copyright Section -->
-            <div class="row">
-                <div class="col-12 text-center mt-4">
-                    <p class="m-0">&copy; 2024 Narendra Satya Adikurniawan. All Rights Reserved.</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+        </footer>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
