--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2>Hello, I'm Narendra <i class="ph-bold ph-hand-waving"></i></h2>
             <h3>Frontend Developer</h3>
             <section id="about">
-                <p>As a beginner programmer. I was born in Kudus city in May 2005. I am currently studying for a bachelor's degree in the Bachelor of Informatics Engineering Program at Muhammadiyah University of Surakarta.<br> I am disciplined, honest, confident,
+                <p>As a beginner programmer. I was born in Kudus city in May 2005. I am currently studying for a bachelor's degree in the Bachelor of Informatics Engineering Program at Muhammadiyah University of Surakarta. I am disciplined, honest, confident,
                     persistent, goal-oriented, and have good public speaking skills.</p>
             </section>
             <div class="home-btn">
