--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="style.css" />
 
 </head>
-<!-- <section id="about"></section> -->
-<!-- <a href="index.html#about">About</a> -->
 
 <body>
     <header>
+        <button class="menu-toggle" id="menu-toggle">
+            <i class="ph-bold ph-list"></i>
+        </button>
         <ul class="navmenu">
             <li><a href="index.html#home">Home</a> </li>
             <li><a href="index.html#about">About</a> </li>
@@ -58,6 +59,7 @@
         <a href="#"><i class="ph-bold ph-linkedin-logo"></i></a>
         <a href="#"><i class="ph-bold ph-github-logo"></i></a>
     </div>
+    <br>
     <!-- <a href="#" class="scroll-btn">Scroll Down <i class="ph-bold ph-arrow-bend-right-down"></i></a> -->
     <section id="skills">
         <h2>My Skills</h2>
@@ -82,6 +84,10 @@
                 <img src="https://cdn-icons-png.flaticon.com/512/5968/5968705.png" alt="Figma Icon">
                 <h3>Figma</h3>
             </div>
+            <!-- <div class="skill">
+                <img src="https://cdn-icons-png.flaticon.com/512/5968/5968705.png" alt="Figma Icon">
+                <h3>Figma</h3>
+            </div> -->
         </div>
     </section>
     <section id="project" class="projects">
@@ -122,60 +128,60 @@
                 <div class="row">
                     <!-- About Me Section -->
                     <div class="col-md-4 mb-3">
-                        <h5>About Me</h5>
+                        <!-- <h5>About Me</h5>
                         <p>
                             I am Narendra Satya Adikurniawan, an Informatics Engineering student with a passion for technology, research, and development. Stay connected to learn more about my journey and projects.
                         </p>
-                    </div>
+                    </div> -->
 
-                    <!-- Contact Info Section -->
-                    <div class="col-md-4 mb-3">
-                        <h5>Contact Info</h5>
-                        <ul class="list-unstyled">
-                            <li>Email:
-                                <a href="mailto:narendra.adikurniawan@gmail.com" class="text-white">narendra.adikurniawan@gmail.com</a>
-                            </li>
-                            <li>Phone:
-                                <a href="tel:+6285890022967" class="text-white">+62 858 9002 2967</a>
-                            </li>
-                        </ul>
-                    </div>
+                        <!-- Contact Info Section -->
+                        <div class="col-md-4 mb-3">
+                            <h5>Contact Info</h5>
+                            <ul class="list-unstyled">
+                                <li>Email:
+                                    <a href="mailto:narendra.adikurniawan@gmail.com" class="text-white">narendra.adikurniawan@gmail.com</a>
+                                </li>
+                                <li>Phone:
+                                    <a href="tel:+62 878 7575 1505" class="text-white">+62 878 7575 1505</a>
+                                </li>
+                            </ul>
+                        </div>
 
-                    <!-- Follow Me Section -->
-                    <div class="col-md-4 mb-3">
-                        <h5>Follow Me</h5>
-                        <ul class="list-unstyled d-flex gap-3">
-                            <li>
-                                <a href="https://instagram.com/narenvisuals_" target="_blank" class="text-white">
-                                    <img src="https://img.icons8.com/ios-filled/24/ffffff/instagram-new.png" alt="Instagram">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://www.linkedin.com/in/narendra-satya-adikurniawan" target="_blank" class="text-white">
-                                    <img src="https://img.icons8.com/ios-filled/24/ffffff/linkedin.png" alt="LinkedIn">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="mailto:narendra.adikurniawan@gmail.com" target="_blank" class="text-white">
-                                    <img src="https://img.icons8.com/ios-filled/24/ffffff/gmail.png" alt="Gmail">
-                                </a>
-                            </li>
-                            <li>
-                                <!-- <a href="https://twitter.com/narenvisuals_" target="_blank" class="text-white">
+                        <!-- Follow Me Section -->
+                        <div class="col-md-4 mb-3">
+                            <h5>Follow Me</h5>
+                            <ul class="list-unstyled d-flex gap-3">
+                                <li>
+                                    <a href="https://instagram.com/narenvisuals_" target="_blank" class="text-white">
+                                        <img src="https://img.icons8.com/ios-filled/24/ffffff/instagram-new.png" alt="Instagram">
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.linkedin.com/in/narendra-satya-adikurniawan" target="_blank" class="text-white">
+                                        <img src="https://img.icons8.com/ios-filled/24/ffffff/linkedin.png" alt="LinkedIn">
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="mailto:narendra.adikurniawan@gmail.com" target="_blank" class="text-white">
+                                        <img src="https://img.icons8.com/ios-filled/24/ffffff/gmail.png" alt="Gmail">
+                                    </a>
+                                </li>
+                                <li>
+                                    <!-- <a href="https://twitter.com/narenvisuals_" target="_blank" class="text-white">
                                 <img src="https://img.icons8.com/ios-filled/24/ffffff/twitter.png" alt="Twitter">
                             </a> -->
-                            </li>
-                        </ul>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
 
-                <!-- Copyright Section -->
-                <div class="row">
-                    <div class="col-12 text-center mt-4">
-                        <p class="m-0">&copy; 2024 Narendra Satya Adikurniawan. All Rights Reserved.</p>
+                    <!-- Copyright Section -->
+                    <div class="row">
+                        <div class="col-12 text-center mt-4">
+                            <p class="m-0">&copy; 2024 Narendra Satya Adikurniawan. All Rights Reserved.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
         </footer>
     </section>
 
